[tool.poetry]
name = "revolver-api"
version = "0.1.3"
description = ""
authors = ["suke <suke971219@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
xlwt = "^1.3.0"
django-queryset-csv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
